XSTOUCAN-90: Broken layout for panels containing just a message box Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/toucan@20867 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-toucan/src/main/resources/toucan/toucan.css
+++ b/xwiki-platform-toucan/src/main/resources/toucan/toucan.css
@@ -1926,8 +1926,11 @@ html > body .panels {
 }
 
 div.xwikipanelcontents div.warningmessage,
-    div.xwikipanelcontents table {
-    margin-top: 0;
+div.xwikipanelcontents div.infomessage,
+div.xwikipanelcontents div.errormessage,
+div.xwikipanelcontents div.plainmessage,
+div.xwikipanelcontents table {
+  margin-top: 0;
 }
 
 div.xwikipanelcontents ul.minus {
